@@ -1,9 +1,9 @@
 Mail-DKIM version 0.22
 ======================
 
-This module implements the various components of the DKIM message-signing
-and verifying standard for Internet mail. It currently tries to implement
-Internet Draft draft-ietf-dkim-base-05.
+This module implements the various components of the DKIM and DomainKeys
+message-signing and verifying standards for Internet mail. It currently
+tries to implement Internet Draft draft-ietf-dkim-base-05.
 
 INSTALLATION
 
@@ -41,7 +41,7 @@ Report bugs to Jason Long <jlong@messiah.edu>.
 
 COPYRIGHT AND LICENCE
 
-Copyright (C) 2006 by Messiah College
+Copyright (C) 2006-2007 by Messiah College
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.6 or,
